# graduate-coursework

CS513-Geospatial-Vision-and-Visualization/HW1/: readme.txt  smear_detection.py
CS513-Geospatial-Vision-and-Visualization/HW2/: AerialImageRetrieval.cs  readme.txt
CS513-Geospatial-Vision-and-Visualization/HW3/: readme.txt  speed_limit_sign_detection.cpp
CS513-Geospatial-Vision-and-Visualization/project/: CMakeLists.txt  project_description.odt  readme.txt  road_feature_extraction.cpp
CS525-Advanced-Database-Organization/assign1/: Makefile  README.txt  dberror.h  storage_mgr.c  test_assign1_extra.c
CS525-Advanced-Database-Organization/assign2/: Makefile  README.txt  buffer_mgr.c  dberror.h  storage_mgr.c  storage_mgr.h  test_assign1_extra.c
CS525-Advanced-Database-Organization/assign3/: Makefile  buffer_mgr.c  record_mgr.c  storage_mgr.c
CS525-Advanced-Database-Organization/assign4/: Makefile  README.txt  btree_mgr.c  buffer_mgr.c  buffer_mgr.h  dberror.h  record_mgr.c  record_mgr.h  storage_mgr.c  storage_mgr.h  tables.h
CS550-Advanced-Operating-Systems/PA1/: client.c  makefile  server.c
CS550-Advanced-Operating-Systems/PA2/: client.py  config.txt~  server.py
CS550-Advanced-Operating-Systems/PA3/: client.py
CS553-Cloud-Computing/Assignment1/: cpu.cpp  data.xlsx  disk.cpp  gpu.cu  gpu.sh  makefile  mem.cpp  net.cpp  readme.txt
CS553-Cloud-Computing/Assignment2/: WordCount.cpp  WordCount.java  makefile  readme.txt
CS553-Cloud-Computing/Assignment4/: client.py  data.xlsx  genfile.py  scheduler.py  worker.py
(+5 files in other folders)
