cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.7)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(road_feature_extraction road_feature_extraction.cpp)
target_link_libraries(road_feature_extraction ${PCL_LIBRARIES} libvtkCommon.so libvtkFiltering.so )